--- a/css/main-style.css
+++ b/css/main-style.css
@@ -15,6 +15,8 @@ body {
 
 /*Start Upper-nav*/
 .upper-nav {
+    font-size: 12px;
+    letter-spacing: 1px;
     background-color: #08526d;
     color: #ffffff;
     padding: 10px;
@@ -222,5 +224,6 @@ body {
 }
 .featured-work .shuffle-images img{
     width: 100%;
+    transition: all 0.3s ease-in-out;
 }
 /* End Featured Work */
