--- a/css/main-style.css
+++ b/css/main-style.css
@@ -247,4 +247,28 @@ body {
     color: #687074;
     margin-bottom: 50px;
 }
+.latest-post .card {
+    margin-bottom: 20px;
+}
+.latest-post .card .card-title{
+    color: #08526d;
+}
+.latest-post .card .card-subtitle{
+    font-size: 12px;
+}
+.latest-post .card .card-text{
+    font-size: 16px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+.latest-post .card .card-link{
+    font-size: 16px;
+    color: #ed1d24;
+    font-weight: bold;
+}
+.latest-post .card .card-link:hover,
+.latest-post .card .card-link:active,
+.latest-post .card .card-link:focus{
+    color: #ed4694;
+}
 /* End Latest Post */
